--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
 		"axios": "^1.1.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^5.3.4",
+		"react-redux": "^8.0.5",
+		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-thunk": "^2.4.2",
