--- a/front/package.json
+++ b/front/package.json
@@ -18,7 +18,8 @@
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-thunk": "^2.4.2",
-		"styled-components": "^5.3.9"
+		"styled-components": "^5.3.9",
+		"validator": "^13.9.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
