--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.1.3",
+		"formik": "^2.2.9",
 		"moment": "^2.29.4",
 		"normalize": "^0.3.1",
 		"react": "^18.2.0",
@@ -17,11 +18,13 @@
 		"react-icons": "^4.8.0",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^5.2.0",
+		"react-toastify": "^9.1.2",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-thunk": "^2.4.2",
 		"styled-components": "^5.3.9",
-		"validator": "^13.9.0"
+		"validator": "^13.9.0",
+		"yup": "^1.1.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
