--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@mercadopago/sdk-react": "^0.0.8",
 		"axios": "^1.1.3",
 		"moment": "^2.29.4",
 		"normalize": "^0.3.1",
