--- a/front/package.json
+++ b/front/package.json
@@ -11,8 +11,10 @@
 	"dependencies": {
 		"@cloudinary/react": "^1.11.2",
 		"@cloudinary/url-gen": "^1.10.0",
+		"@emailjs/browser": "^3.11.0",
 		"@mercadopago/sdk-react": "^0.0.8",
 		"axios": "^1.1.3",
+		"emailjs": "^4.0.1",
 		"formik": "^2.2.9",
 		"moment": "^2.29.4",
 		"normalize": "^0.3.1",
