--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "google-auth-library": "^8.7.0",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.0",
     "mercadopago": "^1.5.15",
     "morgan": "^1.10.0",
