--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "normalize": "^0.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^9.1.2",
