--- a/back/package.json
+++ b/back/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "mercadopago": "^1.5.15",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
