--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "normalize": "^0.3.1",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
