--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@emailjs/browser": "^3.11.0",
     "@mercadopago/sdk-react": "^0.0.8",
     "axios": "^1.1.3",
+    "chart.js": "^4.3.0",
     "emailjs": "^4.0.1",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
