--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-rating": "^2.0.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^9.1.2",
