--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@mercadopago/sdk-react": "^0.0.8",
     "axios": "^1.1.3",
     "chart.js": "^4.3.0",
+    "date-fns": "^2.30.0",
     "emailjs": "^4.0.1",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
